--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,8 @@ jobs:
         uses: ./ # Uses an action in the root directory
         id: eslint-changeset
         with:
-          main-branch: 'master-of-puppets'
+          main-branch: 'main'
+          file-extension: 'js'
       # Use the output from the `hello` step
       - name: Get the output time
         run: echo "The time was ${{ steps.eslint-changeset.outputs.something }}"
