--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,10 +6,10 @@ jobs:
     name: A job to test eslint-changeset action
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Hello world action step
+      - name: Eslint Changeset Step
         uses: ./ # Uses an action in the root directory
         id: eslint-changeset
         with:
