--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,14 +5,14 @@ jobs:
     runs-on: ubuntu-latest
     name: A job to test eslint-changeset action
     steps:
-      - name: Checkout main branch
-        uses: actions/checkout@v3
-        with:
-          ref: 'main'
       - name: Checkout
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - run: |
+          git fetch --no-tags --depth=1 origin main
+          git checkout -b main
+          git checkout ${{ github.event.push.head.sha }}
       - name: Eslint Changeset Step
         uses: ./ # Uses an action in the root directory
         id: eslint-changeset
