--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
           fetch-depth: 0
       - run: |
           git fetch --no-tags --depth=1 origin main
+          git pull --all
       - name: Eslint Changeset Step
         uses: ./ # Uses an action in the root directory
         id: eslint-changeset
