--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,9 @@ jobs:
           fetch-depth: 0
       - run: |
           git fetch --no-tags --depth=1 origin main
+          git checkout main 
           git pull --all
+          git checkout {{github.event.push.head.sha}}
       - name: Eslint Changeset Step
         uses: ./ # Uses an action in the root directory
         id: eslint-changeset
