--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           git fetch --no-tags --depth=1 origin main
           git checkout main 
           echo '++++++++++++++++++++++++++++++++++++++++++++'
-          echo ${{ github.event.pull_request.head.sha }}
+          echo ${{ github.head_ref }}
           echo '++++++++++++++++++++++++++++++++++++++++++++'
           git checkout ${{ github.event.pull_request.head.sha }}
       - name: Eslint Changeset Step
