--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - run: |
           git fetch --no-tags --depth=1 origin main
           git checkout main 
-          git checkout -
+          git checkout ${{ github.head_ref }}
       - name: Eslint Changeset Step
         uses: ./
         id: eslint-changeset
