Cleanup and refactor

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gh-action-eslint-changeset",
   "version": "1.0.0",
-  "description": "Github action that lints only the files within a particular commit to a branch",
+  "description": "Github action that lints only the files within a particular commit to a branch, on a pull request event.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
